add description part into Jobs component

--- a/src/static/css/pages/_resume.scss
+++ b/src/static/css/pages/_resume.scss
@@ -31,13 +31,16 @@
 		}
 		.job {
 			margin: 1em;
-			p{
-				margin: 0;
-			}
 		}
 	}
 
 	.jobs-container {
+		// .description {
+		p{
+			margin: 0;
+			font-size: 14px;
+		}
+		// }
 		.points {
 			li {
 				margin: 0;
